--- a/.github/workflows/parser1c.yml
+++ b/.github/workflows/parser1c.yml
@@ -1,7 +1,4 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
+name: parser1c
 
 on:
   push:
@@ -25,4 +22,4 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./... --cover
