--- a/.github/workflows/parser1c.yml
+++ b/.github/workflows/parser1c.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Build
       run: go build -v ./...
 
-    - name: Run coverage
-        run: go test -v ./... -race -coverprofile=coverage.out -covermode=atomic
+    - name: Test
+        run: go test -v ./... --cover -coverprofile=coverage.out -covermode=atomic
     
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
