--- a/.github/workflows/parser1c.yml
+++ b/.github/workflows/parser1c.yml
@@ -2,7 +2,7 @@ name: parser1c
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
   pull_request:
     branches: [ "main" ]
 
